# dj-mcp

./: .dockerignore  Dockerfile  LICENSE  README.md  agent_example.py  docker-compose.yml  pyproject.toml
analytics/: admin.py  models.py
analytics/migrations/: 0001_initial.py
mcp_server/: admin.py  apps.py  models.py  protocol.py  student_tools.py  tools.py  urls.py  views.py  write_tools.py
mcp_server/management/commands/: create_mcp_key.py  seed_data.py
mcp_server/migrations/: 0001_initial.py
project/: settings.py  urls.py
students/: admin.py  models.py
students/migrations/: 0001_initial.py
