[project]
name = "dj-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==5.2",
    "python-dotenv>=1.0",
    "psycopg2-binary>=2.9",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.4",
    "pydantic>=2.13.4",
    "anthropic>=0.116.0",
]
